<resources>
    <string name="app_name">Body-Transform</string>

    <string name="title_section1">Avatar</string>
    <string name="title_section2">Input</string>
    <string name="title_section3">Analyse</string>

    <!-- COMMON STRINGS -->
    <string name="action_settings">Settings</string>
    <string name="lb_no_value">n.a.</string>

    <string name="lb_void">-</string>
    <string name="lb_kg">kg</string>
    <string name="lb_cm">cm</string>

    <!-- AVATAR-FRAGMENT -->
    <string name="lb_avatarBodyHeight">Körpergröße</string>
    <string name="lb_avatarBodyWeight">Körpergewicht</string>
    <string name="lb_avatarBodyAge">Alter</string>

    <string name="lb_avatarResultBodyHeight"></string>
    <string name="lb_avatarResultBodyWeight"></string>
    <string name="lb_avatarResultBodyAge"></string>


    <string name="lb_currentStatusListIndex"></string>


    <string name="btn_addNewState">Add new State</string>
    <string name="img_avatarDescContent">Show last body results</string>

    <!-- ALERTS -->
    <string name="messageValidHeight">Größe soll zwischen 150cm und 250cm liegen!</string>
    <string name="messageValidWeight">Gewicht soll zwischen 40kg und 120kg liegen!</string>
    <string name="messageValidAge">Alter soll zwischen 0 Jahre und 110 Jahre liegen!</string>

</resources>
