<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:measureWithLargestChild="false"
    android:rowCount="4"
    android:columnCount="3">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                style="@style/DataStyleLine1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_column="0"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lb_avatarBodyAge"
                        android:id="@+id/textView2"
                        android:gravity="fill_vertical" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_column="1">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/etx_avatarBodyAge"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_column="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/txv_voidUnit"
                        android:text="@string/lb_void"
                        android:gravity="fill_vertical"
                        android:layout_weight="1" />
                </LinearLayout>

            </TableRow>

            <TableRow style="@style/DataStyleLine1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_column="0">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lb_avatarBodyHeight"
                        android:id="@+id/txv_avatarBodyHeight"
                        android:gravity="fill_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_column="1"
                    android:weightSum="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/etx_avatarBodyHeight" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_column="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/txv_cm"
                        android:text="@string/lb_cm"
                        android:gravity="fill_vertical" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                style="@style/DataStyleLine1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_column="0">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lb_avatarBodyWeight"
                        android:id="@+id/txv_avatarBodyWeight"
                        android:gravity="fill_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_column="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/etx_avatarBodyWeight" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_column="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/txv_kg"
                        android:text="@string/lb_kg"
                        android:gravity="fill_vertical" />
                </LinearLayout>

            </TableRow>

        </TableLayout>
    </ScrollView>

</RelativeLayout>